paperless/paperless/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
